--- a/index.html
+++ b/index.html
@@ -1,71 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reconhecimento de Imagens - Machine Learning</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>🤖 Reconhecimento de Objetos</h1>
+        <p style="text-align: center; color: #666;">Usando modelo COCO-SSD pré-treinado</p>
+        
+        <div class="controls">
+            <button type="button" onclick="initModel()">🧠 Carregar Modelo</button>
+            <button type="button" onclick="reloadModel()">🔄 Recarregar</button>
+            <button type="button" onclick="startWebcam()">📷 Webcam</button>
+            <button type="button" onclick="stopWebcam()">⏹️ Parar</button>
+            <button type="button" onclick="showTrainingData()">ℹ️ Info</button>
+        </div>
 
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
-<div id="label-container"></div>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-<script type="text/javascript">
-    // More API functions here:
-    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+        <div class="input-section">
+            <h3>📸 Testar com Imagem</h3>
+            <input type="file" id="imageInput" accept="image/*" onchange="handleImageUpload(event)">
+            <div id="preview-container"></div>
+        </div>
 
-    // the link to your model provided by Teachable Machine export panel
-    const URL = "./";
+        <div class="training-section" style="background: #e8f4f8; border-left-color: #3498db;">
+            <h3>✨ Modelo COCO-SSD</h3>
+            <p style="margin: 0;">Detecta ~90 classes de objetos diferentes.</p>
+            <div id="training-status" style="margin-top: 10px;">Clique em "Carregar Modelo" para começar</div>
+        </div>
 
-    let model, webcam, labelContainer, maxPredictions;
+        <div class="content">
+            <div id="webcam-container"></div>
+            <div id="results-container">
+                <h3>Resultados</h3>
+                <div id="label-container"></div>
+            </div>
+        </div>
 
-    // Load the image model and setup the webcam
-    async function init() {
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <div id="modal-body"></div>
+            </div>
+        </div>
+    </div>
 
-        // load the model and metadata
-        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-        // or files from your local hard drive
-        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
-
-        // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-        await webcam.setup(); // request access to the webcam
-        await webcam.play();
-        window.requestAnimationFrame(loop);
-
-        // append elements to the DOM
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
-        labelContainer = document.getElementById("label-container");
-        for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement("div"));
-        }
-    }
-
-    async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
-    }
-
-    // run the webcam image through the image model
-    async function predict() {
-        // predict can take in an image, video or canvas html element
-        const prediction = await model.predict(webcam.canvas);
-        for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
-        }
-    }
-</script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd@latest/dist/coco-ssd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
